# sinan-captcha

./: .env  .gitignore  AGENTS.md  GEMINI.md  README.md  graphical_captcha_training_guide.md  pyproject.toml  repo_cli.py  repo_release.py  repo_solver_export.py
.factory/: agent-session.json  project.json  tech-profile.json
.factory/memory/: agent-session.md  autonomy-rules.md  change-summary.md  current-state.md  design-assets.summary.md  evolution-baseline.md  motivation-state.md  pr.summary.md  prd.summary.md  project-index.md  remote-pr.summary.md  requirements-verification.summary.md  state-doctor.summary.md  tasks.summary.md  tech-stack.summary.md  traceability.summary.md
.factory/process/: daily-status.md  execution-log.md  historical-project-onboarding-report.md  risk-register.md  state-doctor-report.md
.opencode/commands/: judge-trial.md  plan-dataset.md  plan-retune.md  result-read.md  review-embedder.md  study-status.md
configs/: README.md  materials-pack.example.toml  materials-pack.toml  workspace.example.yaml
core/: __init__.py  _version.py  cli.py  group2_semantics.py  project_metadata.py
core/auto_train/: __init__.py  business_eval.py  cli.py  contracts.py  controller.py  dataset_plan.py  decision_protocol.py  json_extract.py  layout.py  opencode_assets.py  opencode_commands.py  opencode_runtime.py  opencode_skills.py  optimize.py  optuna_runtime.py  policies.py  state_machine.py  stop_rules.py  storage.py  study_status.py  summary.py
core/autolabel/: service.py
core/common/: images.py  paths.py
core/convert/: __init__.py  cli.py  service.py
core/crawl/: ctrip_login.py
core/dataset/: __init__.py  cli.py  contracts.py  validation.py
core/evaluate/: __init__.py  cli.py  service.py
core/exam/: cli.py  service.py
core/generator/: __init__.py  runner.py
core/inference/: __init__.py  service.py
core/materials/: __init__.py  cli.py  group1_query_icons.py  query_audit.py  query_audit_cli.py  service.py
core/modeltest/: __init__.py  cli.py  service.py
core/ops/: __init__.py  env.py  setup_train.py
core/predict/: cli.py  service.py
core/release/: __init__.py  cli.py  service.py  solver_asset_contract.py  solver_export.py
core/solve/: __init__.py  bundle.py  cli.py  contracts.py  group2_runtime.py  service.py
core/train/: __init__.py  base.py  prelabel.py
docs/: index.md  publication-policy.json
docs/01-getting-started/: index.md
docs/02-user-guide/: application-integration.md  auto-train-on-training-machine.md  complete-training-operations-guide.md  from-base-model-to-training-guide.md  generator-cli-reference.md  group1-label-reference-and-review-guide.md  group1-material-category-backlog.md  how-to-check-cuda-version.md  index.md  prepare-business-exam-with-x-anylabeling.md  prepare-training-data-with-generator.md  solver-bundle-cli-reference.md  solver-package-function-reference.md  solver-package-usage-guide.md  trainer-cli-reference.md  use-and-test-trained-models.md  use-build-artifacts.md  use-solver-bundle.md  user-guide.md  windows-bundle-install.md  windows-quickstart.md
docs/03-developer-guide/: index.md  local-development-workflow.md  maintainer-quickstart.md  release-and-delivery-workflow.md  repository-structure-and-boundaries.md  solver-bundle-and-integration.md
docs/04-project-development/: index.md
generator/: go.mod
generator/configs/: default.yaml  group1.firstpass.yaml  group2.firstpass.yaml  smoke.yaml
materials/manifests/: classes.yaml  group2.shapes.yaml  materials.yaml
script/: README.md
script/crawl/: ctrip_login.py
scripts/: README.md  build_group1_generator_icon_pack.py  download_group1_candidate_icons.py  eval_solver_group2_reviewed.py  organize_group1_query_icons.py  organize_group2_gap_shapes.py  repo.py
scripts/autolabel/: run_autolabel.py
scripts/convert/: build_yolo_dataset.py
scripts/crawl/: ctrip_login.py
scripts/evaluate/: evaluate_model.py
scripts/export/: export_group1_batch.py  export_group2_batch.py
scripts/materials/: build_offline_pack.py
scripts/ops/: check-env.ps1
scripts/repo_tools/: __init__.py  repo_cli.py  repo_release.py  repo_solver_asset_contract.py  repo_solver_export.py
scripts/train/: train_group1.ps1  train_group2.ps1
solver/: Cargo.toml  README.md  pyproject.toml
solver/native/: README.md
solver/native/sinanz_ext/: Cargo.toml  README.md
solver/native/sinanz_ext/src/: runtime.rs
solver/resources/: manifest.json
solver/src/: sinanz.py  sinanz_group1_service.py  sinanz_group2_runtime.py  sinanz_resources.py
solver/tests/: test_group1_runtime.py  test_group1_service.py  test_group2_service.py  test_native_bridge.py  test_native_project_layout.py  test_public_api.py
solver_package/: README.md  pyproject.toml
solver_package/native/sinanz_ext/src/: bridge.rs  error.rs  lib.rs
solver_package/src/sinanz/: __init__.py  errors.py  image_io.py
solver_package/src/sinanz/resources/: __init__.py
solver_package/src/sinanz/resources/metadata/: README.md
solver_package/tests/: test_group2_runtime.py  test_group2_service.py  test_public_api.py
tests/python/: conftest.py  test_auto_train_analysis.py  test_auto_train_business_eval.py  test_auto_train_cli.py  test_auto_train_contracts.py  test_auto_train_controller.py  test_auto_train_dataset_plan.py  test_auto_train_decision_protocol.py  test_auto_train_embedder_review_protocol.py  test_auto_train_group1_pipeline.py  test_auto_train_json_extract.py  (+45 more)
(+136 files in other folders)
