[project]
name = "sinan-captcha-workspace"
version = "0.1.0"
description = "Monorepo workspace root for sinan-captcha packages."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "sinan-captcha[train]",
  "sinanz",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "packages/sinan-captcha",
  "packages/solver",
]

[tool.uv.sources]
sinan-captcha = { workspace = true }
sinanz = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["packages/sinan-captcha"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
files = ["packages/sinan-captcha/core", "tests/python"]
strict = true
warn_unused_configs = true

[dependency-groups]
dev = [
  "mypy>=1.11",
  "pillow",
  "playwright",
  "pytest>=8.3",
  "ruff>=0.6",
]
