[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sinan-captcha-workspace"
version = "0.1.0"
description = "Monorepo workspace root for sinan-captcha packages."
readme = "README.md"
requires-python = ">=3.12"
scripts = { repo = "repo_cli:main" }
dependencies = [
  # Root workspace keeps the lightweight CLI package available by default.
  "sinan-captcha",
  "sinanz",
]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
  "packages/sinan-captcha",
  "packages/solver",
]

[tool.uv.sources]
sinan-captcha = { workspace = true }
sinanz = { workspace = true }

[tool.setuptools]
py-modules = ["repo_cli", "repo_release", "repo_solver_export", "repo_solver_asset_contract"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["packages/sinan-captcha/src"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
files = ["packages/sinan-captcha/src", "tests/python"]
strict = true
warn_unused_configs = true

[dependency-groups]
dev = [
  "mypy>=1.11",
  "pillow",
  "playwright",
  "pytest>=8.3",
  "ruff>=0.6",
]
train = [
  # Training repo developers opt into the heavy stack explicitly.
  "sinan-captcha[train]",
  # Torch remains outside the package extra because setup-train chooses the backend per machine.
  "torch",
  "torchaudio",
  "torchvision",
]
