[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sinanz"
version = "0.1.0"
description = "Standalone Python solver package for click and slider captchas."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sinanz = [
  "py.typed",
  "resources/models/*",
  "resources/metadata/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
packages = ["sinanz"]
strict = true
warn_unused_configs = true

[tool.sinanz]
public_api = ["sn_match_slider", "sn_match_targets"]
native_extension_dir = "native/sinanz_ext"
native_extension_module = "sinanz_ext"
native_bridge_module = "sinanz.native_bridge"
runtime_target = "rust-onnxruntime"

[dependency-groups]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6",
]
